--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     </header>
     <main>
         <div><img src="images/logo.jpg" alt="image" width="350" height="250">
-        <h1>Моя первая веб-страница</h1>
-        <h2>Я начинающий Web разработчик</h2>
-        <p>Меня зовут Виктор. Я нигде не работаю, решил освоить новую для себя профессию.
-        <p>Живу в России. Люблю кататься на велосипеде.</p>
-        <h2>Чему я хочу научиться</h2>
-        <p>На этом курсе я хотел бы освоить профессию <em>frontend</em> и <em>backend</em> разработчика.</p>
-    </main></div>
+            <h1>Моя первая веб-страница</h1>
+            <h2>Я начинающий Web разработчик</h2>
+            <p>Меня зовут Виктор. Я нигде не работаю, решил освоить новую для себя профессию.
+            <p>Живу в России. Люблю кататься на велосипеде.</p>
+            <h2>Чему я хочу научиться</h2>
+            <p>На этом курсе я хотел бы освоить профессию <em>frontend</em> и <em>backend</em> разработчика.</p>
+        </div>
+    </main>
     <hr>
     <footer>
         <div><a href="https://skillfactory.ru/"><span>&copy;&nbsp;Skillfactory</span></a></div>
